# Auto-Stata

./: .env.example  .gitignore  README.md  README.zh-CN.md  config.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py  word_formatter.py
agents/: chart_commentary_agent.py  metadata_agent.py  reporting_agent.py
engine/: __init__.py  stata_engine.py
output/20260407_155000/: variable_mapping.json
output/20260407_155725/: variable_mapping.json
output/20260407_155948/: report.md  variable_mapping.json
output/20260407_192352/: variable_mapping.json
output/20260407_192644/: variable_mapping.json
output/20260407_193356/: report.md  variable_mapping.json
output/20260407_193831/: report.md  variable_mapping.json
output/20260408_134135/: report.md  variable_mapping.json
